OD-10319 revert previous fix : wrap error message into div tag (with display : none style class) instead hiding
git-svn-id: https://svn.ish.com.au/ish/willow/trunk@47810 fb2e276d-fae9-0310-b578-b71ac85840b9

--- a/portal/src/main/static/src/_base.scss
+++ b/portal/src/main/static/src/_base.scss
@@ -264,3 +264,7 @@ ul.dropdown-menu {
 .progress {
 	margin-top: 7px;
 }
+
+.richtext_error {
+	display: none;
+}
